--- a/configure.ac
+++ b/configure.ac
@@ -156,7 +156,7 @@ PKG_CHECK_MODULES([secp256k1], [libsecp256k1 >= 0.0.1])
 
 # Output ${boost_LIBS}
 #------------------------------------------------------------------------------
-AC_SUBST([boost_LIBS], ["-lboost_date_time -lboost_filesystem -lboost_program_options -lboost_locale -lboost_regex -lboost_system"])
+AC_SUBST([boost_LIBS], ["-lboost_date_time -lboost_filesystem -lboost_locale -lboost_program_options -lboost_regex -lboost_system"])
 
 
 # Set flags.
