- add m4 script for detecting iconv

--- a/configure.ac
+++ b/configure.ac
@@ -180,6 +180,12 @@ AS_CASE([${host_os}], [*linux*],
 PKG_CHECK_MODULES([secp256k1], [libsecp256k1 >= 0.0.1])
 
 
+# Require iconv
+#------------------------------------------------------------------------------
+AM_ICONV
+
+
+
 # Set flags.
 #==============================================================================
 # Require a c++11 compiler.
