--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -22,4 +22,4 @@ Requires: @libsecp256k1_PKG@
 Cflags: -I${includedir} -std=c++11 -pthread @testnet@
 
 # Our own lib and any we require that do not publish package configuration.
-Libs: -L${libdir} -lbitcoin @boost_date_time_LIBS@ @boost_filesystem_LIBS@ @boost_locale_LIBS@ @boost_program_options_LIBS@ @boost_regex_LIBS@ @boost_system_LIBS@ @pthread_LIBS@ @rt_LIBS@
+Libs: -L${libdir} -lbitcoin @boost_date_time_LIBS@ @boost_filesystem_LIBS@ @boost_locale_LIBS@ @boost_program_options_LIBS@ @boost_regex_LIBS@ @boost_system_LIBS@ @iconv_LIBS@ @pthread_LIBS@ @rt_LIBS@
