--- a/libbitcoin.pc.in
+++ b/libbitcoin.pc.in
@@ -16,10 +16,10 @@ URL: https://github.com/libbitcoin/libbitcoin
 Version: @PACKAGE_VERSION@
 
 # Our dependencies that publish package configuration.
-Requires: libsecp256k1 >= 0.0.1
+Requires: @secp256k1_PKG@
 
 # Our own include directory and any other compiler flags we require.
-Cflags: -I${includedir} -std=c++11 -pthread @testnet@
+Cflags: -I${includedir} @pthread_CFLAGS@ @testnet@
 
-# Our own lib and any we require that do not publish package configuration.
+# Our own lib directory, lib and any that do not publish package configuration.
 Libs: -L${libdir} -lbitcoin @boost_date_time_LIBS@ @boost_filesystem_LIBS@ @boost_locale_LIBS@ @boost_program_options_LIBS@ @boost_regex_LIBS@ @boost_system_LIBS@ @iconv_LIBS@ @pthread_LIBS@ @rt_LIBS@
